# uuid-example

./: CMakeLists.txt  ReadMe.md
.github/workflows/: test.yaml
src/: lib.cpp  lib.hpp
test/: test.cpp
